[package]
name = "ciphery"
version = "0.2.0"
edition = "2024"

[lib]
name = "ciphery"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ciphery-bin"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
dialoguer = "0.12.0"
hex = "0.4.3"
wasm-bindgen = {version = "0.2", optional = true}

# feature 开关，默认情况下不会开启，即默认情况下不会下载以下依赖
[features]
wasm = ["wasm-bindgen"]
# 当启用 wasm feature 时，自动启用 wasm-bindgen 这个可选依赖

# 减小 wasm 文件体积
[profile.release]
opt-level = "s"
lto = true
